--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,21 @@
+/* bahiana-regular - latin */
+
+@font-face {
+  font-family: 'Bahiana';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''), url('../css/bahiana-v7-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('../css/bahiana-v7-latin-regular.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 body {
-  padding: 20px;
   margin: 0;
+  background: #81b29a;
+  box-shadow: inset 5px 0 25px black;
+  overflow: hidden;
+  color: white;
+  font-family: 'Bahiana', cursive;
 }
 
 body * {
@@ -11,28 +26,85 @@ body * {
 button {
   display: inline-block;
   margin-bottom: 1rem;
+  background: white;
+  border: none;
+  color: rgba(0, 0, 0, .75);
+  padding: 10px 30px;
+  font-size: 24px;
+  border-radius: 10px;
+}
+
+h1, h2 {
+  font-size: 64px;
+  letter-spacing: 2px;
+}
+
+h3 {
+  font-size: 32px;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .grid {
-  width: 200px;
-  height: 200px;
-  border: solid 2px black;
+  width: 420px;
+  height: 420px;
+  border: solid 3px black;
   margin-bottom: 1rem;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
 }
 
 .grid div {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   box-sizing: border-box;
 }
 
 .snake {
-  background: cadetblue;
-  z-index: 1;
+  background: rgba(0, 0, 0, .75);
+  border-radius: 9px;
 }
 
-.apple::before {
-  content: "🍎";
+.apple {
+  background: rgba(0, 0, 0, .75);
+  border-radius: 7px;
+}
+
+.start, .finish {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .75);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.counter {
+  font-size: 64px;
+  color: white;
+}
+
+.select {
+  padding: 5px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, .75);
+  width: 100px;
+}
+
+.display-none {
+  display: none;
 }
